<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/purchased"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/purchased"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notification"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/cart"
        />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        />

</menu>